--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Go Index</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
     <p>
@@ -10,7 +11,7 @@
     <ul>
         {{range .}}
             <li>
-                <a href="/tmpl/packages/{{.}}">{{.}}</a>
+                <a href="/packages/{{.}}">{{.}}</a>
             </li>
         {{end}}
     </ul>
